hphp/hack/test/typecheck/refinements/inter_member.php.exp
File "inter_member.php", line 21, characters 17-21:
Invalid argument (Typing[4110])
File "inter_member.php", line 21, characters 12-14:
Expected int
File "inter_member.php", line 35, characters 20-20:
  via this generic T
File "inter_member.php", line 13, characters 10-15:
But got string
File "inter_member.php", line 29, characters 35-52:
Invalid argument (Typing[4110])
File "inter_member.php", line 14, characters 21-26:
Expected string
File "inter_member.php", line 29, characters 23-25:
But got int
File "inter_member.php", line 31, characters 17-24:
Invalid argument (Typing[4110])
File "inter_member.php", line 31, characters 12-14:
Expected int
File "inter_member.php", line 35, characters 20-20:
  via this generic T
File "inter_member.php", line 14, characters 33-38:
But got string
File "inter_member.php", line 31, characters 23-23:
Invalid argument (Typing[4110])
File "inter_member.php", line 14, characters 21-26:
Expected string
File "inter_member.php", line 31, characters 23-23:
But got int
File "inter_member.php", line 31, characters 17-24:
Invalid argument (Typing[4110])
File "inter_member.php", line 31, characters 12-14:
Expected int
File "inter_member.php", line 35, characters 20-20:
  via this generic T
File "inter_member.php", line 14, characters 33-38:
But got string
